# Web_HW_Module_12

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
migrations/: env.py
src/config/: config.ini
src/database/: db.py  ex.env_Example for dotenv  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py
src/schematic/: auth.py  schemas.py  users.py
src/services/: roles.py
src/services/auth/: auth.py  auth_token.py
static/client/: index.html  main.html
static/client/js/: app.js  main.js
templates/: index.html
