[tool.poetry]
name = "web-hw-module-12"
version = "0.1.0"
description = ""
authors = ["SerhiiAndreiko <130772110+SerhiiAndreiko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.2"}
libgravatar = "^1.0.4"
passlib = "^1.7.4"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
